--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,90 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.sidebar {
+  background-color: #445cc8;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+} 
+#root {
+  height: 100%;
+  width: 100%;
+}
+.logo {
+  width: 51px;
+  position:relative;
+  margin: 10px;
+  height: 35px;
+}
+.logo-text {
+  color: white;
+  font-size: 25px;
+  vertical-align: middle;
+}
+
+.full-heigth {
+  height: 100%;
+}
+.title {
+  color:#445cc8;
+  text-transform: uppercase;
+  text-align: center;
+}
+.content {
+  padding: 20px 40px;
+}
+
+.square {
+  width: 25px;
+  height: 25px;
+  background-color: teal;
+  border-radius: 2px;
+  display: inline-block;
+  margin-right: 10px;
+}
+.section-title {
+  text-transform: uppercase;
+  line-height: 25px;
+  vertical-align: middle;
+  font-weight: 700;
+}
+.title-container {
+  height: 25px;
+  display: flex;
+  align-content: center;
+  margin-bottom: 25px;
+}
+.btn {
+  background-color:#445cc8;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 10px;
+  border-radius: 5px;
+  height: 40px;
+}
+.c-status {
+  background-color: red;
+  border-radius: 20px;
+  color: white;
+  font-size: 11px;
+  padding: 2px 5px;
+}
+.icon {
+  font-size: 25px;
+}
+.tag {
+  font-size: 8px;
+  text-transform: capitalize;
+}
+.row-text {
+  font-size: 12px;
+}
+.row-text.bold {
+  font-weight: 700;
+}
+.table-head {
+  font-size: 12px;
+}
